# watermark-service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: default.yaml
scripts/: setup.sh
src/: app.py  config.py
src/api/: dependencies.py  routes.py  schemas.py
src/models/: checkpoint.py  masked_unet.py  seg_model.py
src/pipeline/: blending.py  context.py  pipeline.py  removal.py  segmentation.py  upscale.py
src/processing/: image_utils.py  io.py
src/worker/: job_manager.py
tests/: conftest.py  test_api.py  test_pipeline.py
